--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="public/style.css">
+    <script src="handlebars.min.js"></script>
+    <script id="templateHB" type="text/x-handlebars-template">
+        <h1>{{title}}</h1>
+        <p>{{body}}</p>
+        <a href="store.html">Shop Now</a>
+    </script>
     <title>Musicon</title>
 </head>
 
@@ -13,6 +20,11 @@
         <h1 class="branding">Musicon</h1>
 
         <nav>
+            <ul class="navbar">
+                <li class="current"><a href="index.html">Home</a></li>
+                <li><a href="store.html">Store</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
 
     </section>
@@ -20,15 +32,14 @@
 
 <article id="introduction">
     <section class="container">
-        <h1>Welcome to Musicon</h1>
-        <p>Musicon is a budding musical storefront with a mission to share the joy of music. These magnificent auditory tools are designed with musical creators, like you, in mind. Hobbyists, beginners, and experts alike can appreciate the resplendent sounds supplied by each and every instrument we carry. Join us in delivering the euphoric vibrations of melodia to the citizens of the world!</p>
-        <a href="store.html">Shop Now</a>
+        <div id="information"></div>
     </section>
 </article>
 
 <footer>
     <p>&copy; Musicon</p>
 </footer>
-<script src="public/main.js"></script>
+
+<script src="public/main.js" type="text/javascript"></script>
 </body>
 </html>
